--- a/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
+++ b/src/app/allModules/registration/vendor-registration/vendor-registration.component.html
@@ -683,7 +683,7 @@
                 </div>
               </div>
             </div>
-            <div fxFlex fxLayout="column">
+            <div fxFlex fxLayout="column" *ngIf="AllQuestionAnswersView?.length">
               <div style="margin-left: 7px">
                 <!-- <span><strong>Contact Table</strong></span> -->
                 <div class="SectionTitle">
@@ -698,90 +698,69 @@
                         <div fxLayout="row">
                           <div fxFlex="100">
                             <span>{{i+1}}.</span> <span
-                              style="font-size: 13px;">{{AllQuestionAnswersView[i].QText}}</span>
+                              style="font-size: 13px;">{{AllQuestionAnswersView[i]?.QText}}</span>
                           </div>
                         </div>
                         <div fxLayout="row">
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'Text'">
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'Text'">
                             <mat-form-field style="margin-right: 5%;width: 100% !important;">
-                              <input formControlName="quest" matInput (click)="ChangeQuestionID(question.QID)"
-                                (keydown.enter)="QuestionEnterKeyDown($event)">
+                              <input formControlName="quest" matInput>
                             </mat-form-field>
                           </div>
-                          <div class="mb-8" fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'Radio'">
-                            <!-- <div *ngFor="let choice of AllQuestionAnswerChoices">
-                              <div *ngIf="AllQuestionAnswersView[i].QID == choice.QID"> -->
+                          <div class="mb-8" fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'Radio'">
                             <mat-radio-group class="example-radio-group" formControlName="quest">
-                              <!-- <span> -->
                               <mat-radio-button [value]="choice.ChoiceText" class="mx-4"
-                                *ngFor="let choice of this.AllQuestionAnswersView[i]?.AnswerChoice">
+                                *ngFor="let choice of AllQuestionAnswersView[i]?.AnswerChoice">
                                 {{choice.ChoiceText}}</mat-radio-button>
-                              <!-- </span> -->
-
                             </mat-radio-group>
-                            <!-- <mat-radio-group aria-label="Select an option"  formControlName="quest">
-                                  <mat-radio-button value="1">Option 1</mat-radio-button>
-                                  <mat-radio-button value="2">Option 2</mat-radio-button>
-                                </mat-radio-group> -->
-                            <!-- </div>
-                            </div> -->
                           </div>
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'DropDown'">
-                            <div fxFlex *ngFor="let choice of AllQuestionAnswerChoices">
-                              <div *ngIf="AllQuestionAnswersView[i].QID == choice.QID">
-                                <mat-form-field style="width: 100%;">
-                                  <mat-select matInput formControlName="quest">
-                                    <mat-option [value]="choice.ChoiceText" (keydown.enter)="QuestionEnterKeyDown()">
-                                      {{choice.ChoiceText}}</mat-option>
-                                  </mat-select>
-                                </mat-form-field>
-                              </div>
-                            </div>
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'DropDown'">
+                            <mat-form-field style="width: 100%;">
+                              <mat-select matInput formControlName="quest">
+                                <mat-option [value]="choice.ChoiceText"
+                                  *ngFor="let choice of AllQuestionAnswersView[i]?.AnswerChoice">
+                                  {{choice.ChoiceText}}</mat-option>
+                              </mat-select>
+                            </mat-form-field>
                           </div>
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'CheckBox'">
-                            <div *ngFor="let choice of AllQuestionAnswerChoices">
-                              <div *ngIf="AllQuestionAnswersView[i].QID == choice.QID">
-                                <mat-checkbox formControlName="quest" [value]="choice.ChoiceText">
-                                  {{choice.ChoiceText}}
-                                </mat-checkbox>
-                              </div>
-                            </div>
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'CheckBox'">
+                            <mat-checkbox *ngFor="let choice of AllQuestionAnswersView[i]?.AnswerChoice"
+                              formControlName="quest" [value]="choice.ChoiceText">
+                              {{choice.ChoiceText}}
+                            </mat-checkbox>
                           </div>
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'Email'">
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'Email'">
                             <div fxFlex fxLayout="row">
                               <div fxFlex="100">
                                 <mat-form-field style="margin-right: 5%;width: 100% !important;">
-                                  <input matInput formControlName="quest" (click)="ChangeQuestionID(question.QID)"
-                                    (keydown.enter)="QuestionEnterKeyDown()">
+                                  <input matInput formControlName="quest">
                                 </mat-form-field>
                               </div>
                             </div>
                           </div>
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'Date'">
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'Date'">
                             <div fxFlex fxLayout="row">
                               <div fxFlex="100">
                                 <mat-form-field style="width: 65%;">
-                                  <input matInput formControlName="quest" [matDatepicker]="questionpicker1" #validUntil
-                                    (click)="ChangeQuestionID(question.QID)" (keydown.enter)="QuestionEnterKeyDown()">
+                                  <input matInput formControlName="quest" [matDatepicker]="questionpicker1" #validUntil>
                                   <mat-datepicker-toggle matSuffix [for]="questionpicker1"></mat-datepicker-toggle>
                                   <mat-datepicker #questionpicker1></mat-datepicker>
                                 </mat-form-field>
                               </div>
                             </div>
                           </div>
-                          <div fxFlex *ngIf="AllQuestionAnswersView[i].QAnsType === 'Number'">
+                          <div fxFlex *ngIf="AllQuestionAnswersView[i]?.QAnsType === 'Number'">
                             <div fxFlex fxLayout="row">
                               <div fxFlex="100">
                                 <mat-form-field style="margin-right: 5%;width: 100% !important;">
-                                  <input formControlName="quest" matInput (click)="ChangeQuestionID(question.QID)"
-                                    (keydown.enter)="QuestionEnterKeyDown()" formControlName="Answer">
+                                  <input formControlName="quest" matInput>
                                 </mat-form-field>
                               </div>
                             </div>
                           </div>
                         </div>
                         <!-- <mat-form-field fxFlex="100" class="mx-12">
-                          <input matInput [placeholder]="AllQuestionAnswersView[i].QText" formControlName="quest">
+                          <input matInput [placeholder]="AllQuestionAnswersView[i]?.QText" formControlName="quest">
                           <mat-error
                             *ngIf="HeaderTemplateFormGroup.get('TemplateParameters').controls[i].get('VariableName').touched &&
                               HeaderTemplateFormGroup.get('TemplateParameters').controls[i].get('VariableName').hasError('required')">
